# flux-lucid

./: Cargo.toml  README.md
review/: AUDIT.md
reviews/: 2026-05-17-build-fix.md
src/: beam_tolerance.rs  dream.rs  head_direction.rs  intent.rs  intent_compilation.rs  intent_emitter.rs  lib.rs  navigation.rs  simulation_first.rs  soa_emitter.rs  spectral.rs
tests/: cdcl_tests.rs  constraint_tests.rs
